# graphaura

./: .env.production.example  .gitignore  README.md  deploy.sh  docker-compose.production.yml  nginx.conf  render.yaml  vercel.json
backend/: Dockerfile  README.md  fly.toml  pyproject.toml  railway.json  vercel.json
backend/api/: index.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py
backend/src/api/routes/: documents.py  graph.py  search.py
backend/src/database/: __init__.py  neo4j.py  postgres.py
backend/src/models/: __init__.py  entities.py  relationships.py
backend/src/services/: __init__.py  neo4j_service.py  r2r_service.py  vector_service.py
frontend/: README.md  package.json  pnpm-lock.yaml  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Graph3D.tsx  animated-border-demo.tsx  animated-circles.tsx  gradient-background.tsx  liquid-glass-button.tsx
frontend/lib/: api.ts
frontend/stores/: graphStore.ts
frontend/types/: graph.ts
r2r-config/: config.yaml
